syntax = "proto3";

option java_package = "feup.sdle.message";
option java_outer_classname = "HashRingOperationMessage";

message HashRingLogOperationMessage {
  repeated HashRingOperation operations = 1;
}

message HashRingOperation {
  enum OperationType {
    ADD = 0;
    REMOVE = 1;
  }

  OperationType operationType = 2;
  repeated bytes hashes = 3;
}
